WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235727
Fix !ENABLE(ACCESSIBILITY) after
r288674
https://bugs.webkit.org/show_bug.cgi?id=235727
Summary
Fix !ENABLE(ACCESSIBILITY) after r288674
Don Olmstead
Reported
2022-01-27 12:30:16 PST
Forgot to add AXObjectCache::updateLoadingProgress
Attachments
Patch
(1.57 KB, patch)
2022-01-27 12:37 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-01-27 12:30:27 PST
<
rdar://problem/88147878
>
Don Olmstead
Comment 2
2022-01-27 12:37:39 PST
Created
attachment 450166
[details]
Patch
Tyler Wilcock
Comment 3
2022-01-27 12:47:04 PST
LGTM
EWS
Comment 4
2022-01-27 13:22:43 PST
Committed
r288699
(
246497@main
): <
https://commits.webkit.org/246497@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450166
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug