Fix !ENABLE(ACCESSIBILITY) after r288674 https://bugs.webkit.org/show_bug.cgi?id=235727 <rdar://problem/88147878>

Unreviewed build fix.

In r288674 AXObjectCache had updateLoadingProgress added but it wasn't added to the block
of inlined !ENABLE(ACCESSIBILITY) methods further down the file.


* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::updateLoadingProgress):



Canonical link: https://commits.webkit.org/246497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288699 268f45cc-cd09-0410-ab3c-d52691b4dbfc